Fix .quote__text overflow when resizing, occuring between 900px-2100px.

--- a/scss/font.scss
+++ b/scss/font.scss
@@ -129,6 +129,7 @@ header // Change to white after bg is set
 // <!----------- QUOTE ----------->
 .quote__text
 {   // REFACTOR repeats
+    width: 90vw;
     color:       $blue;
     font-family: 'Playfair Display', serif;
     line-height:  1.4em;
